# can_test

./: README.md
can_demo_for_linux/: CMakeLists.txt
can_demo_for_linux/src/: main.cpp
can_demo_for_win/: CMakeLists.txt
can_demo_for_win/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
can_demo_for_win/demo.dir/Debug/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
can_demo_for_win/include/: ControlCAN.h
can_demo_for_win/src/: main.cpp
kvaser_demo_for_win/: CMakeLists.txt  _build.bat  _run.bat  main.cpp
kvaser_demo_for_win/include/: candemo.h  kvaDbLib.h  kvrlib.h
kvaser_demo_for_win/libs/: canlib32.lib  kvaDbLib.lib  kvaMemoLib.lib  kvaMemoLibXML.lib  kvlclib.lib  kvmlib.lib  kvrlib.lib  linlib.lib
